--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - fix for perl 5.21.4: ensure barewords are parsed properly (RT#99021,
+          perl RT#122757, Father Chrysostomos)
 
 0.24    2010-09-24
         - Makefile.PL fixed
